<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/chooseTextSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/activity_settings_choose_text_size_label"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@id/textSizeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/textSizeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseTextSizeLabel">

        <RadioButton
            android:id="@+id/radioButtonTextSizeSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_small_text_size_label"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/radioButtonTextSizeMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_medium_text_size_label"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/radioButtonTextSizeBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_big_text_size_label"
            android:textSize="@dimen/text_size_medium" />
    </RadioGroup>

    <TextView
        android:id="@+id/chooseTextColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/activity_settings_choose_text_color_label"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@id/textColorRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/textColorRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseTextColorLabel">

        <RadioButton
            android:id="@+id/radioButtonTextColorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_green_text_color_label"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/radioButtonTextColorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_black_text_color_label"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/radioButtonTextColorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_settings_red_text_color_label"
            android:textSize="@dimen/text_size_medium" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>