<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        style="@style/ButtonsStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_settings_label"
        android:textSize="@dimen/text_size_medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createFileButton"
        style="@style/ButtonsStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_create_file_label"
        android:textSize="@dimen/text_size_medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewFileButton"
        style="@style/ButtonsStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_check_file_label"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editFileButton"
        style="@style/ButtonsStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_edit_file_label"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone" />
</LinearLayout>